--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#" class="nav-link active" data-view="overview" data-i18n="nav_about">Overview</a>
             <a href="#" class="nav-link" data-view="progress" data-i18n="nav_status">Progress</a>
             <a href="#" class="nav-link" data-view="deploy" data-i18n="nav_deploy">Deploy</a>
-            <a href="#" class="nav-link" data-view="community" data-i18n="nav_contact">Community</a>
+            <a href="#" class="nav-link community-link" data-view="community" data-i18n="nav_contact">Community</a>
           </nav>
 
           <div class="theme-switch" aria-label="Theme switcher">
@@ -91,13 +91,15 @@
           </article>
         </div>
 
-        <div class="live-slot">
-          <p class="label" data-i18n="live_label">Live board URL</p>
-          <p>
-            <strong><a href="https://board.stewrobot.com" rel="noreferrer">https://board.stewrobot.com</a></strong>
-            <span class="chip live" data-i18n="live_chip">online</span>
-          </p>
-          <p class="hint" data-i18n="live_hint">Community board is now live with HTTPS.</p>
+        <div class="progress-log">
+          <h3 data-i18n="progress_log_title">Recent milestones (latest first)</h3>
+          <ul>
+            <li><strong>2026-02-17</strong> — <span data-i18n="milestone_1">Live board HTTPS activation + custom domain routing stabilized.</span></li>
+            <li><strong>2026-02-17</strong> — <span data-i18n="milestone_2">Community workspace mode added (in-page board control tabs).</span></li>
+            <li><strong>2026-02-16</strong> — <span data-i18n="milestone_3">Board CRUD, comments, password protection, and IP capture completed.</span></li>
+            <li><strong>2026-02-16</strong> — <span data-i18n="milestone_4">Monorepo structure launched for web, mobile, backend, and shared packages.</span></li>
+            <li><strong>2026-02-16</strong> — <span data-i18n="milestone_5">Organization + social branding + domain pipeline established.</span></li>
+          </ul>
         </div>
       </section>
 
@@ -107,6 +109,7 @@
           <a class="btn" href="https://github.com/stewrobot/board-server" target="_blank" rel="noreferrer" data-i18n="board_source">Board source ↗</a>
         </div>
         <p class="board-note" data-i18n="board_note">Live board deployment is complete. This preview shows the intended interaction style.</p>
+        <p class="embed-help" data-i18n="embed_help">If the embedded board does not load, use “Open Full” to continue in the same tab.</p>
 
         <div class="board-shell">
           <div class="board-tabs">
@@ -175,7 +178,18 @@
           <li data-i18n-html="deploy_4">Run app on port 3000 via PM2 (<code>ecosystem.config.cjs</code>)</li>
           <li data-i18n-html="deploy_5">Reverse proxy <code>board.stewrobot.com</code> → <code>127.0.0.1:3000</code></li>
           <li data-i18n-html="deploy_6">Enable HTTPS certificate and verify CRUD + API docs</li>
+          <li data-i18n-html="deploy_7">Set daily DB backup + 14-day retention and monthly restore drill</li>
+          <li data-i18n-html="deploy_8">Monitor uptime, error logs, and certificate renewal status</li>
         </ul>
+
+        <div class="ops-visual">
+          <h3 data-i18n="ops_title">Service map</h3>
+          <div class="flow">
+            <div>stewrobot.com<br /><span>GitHub Pages</span></div>
+            <div>board.stewrobot.com<br /><span>Nginx + Node</span></div>
+            <div>MySQL<br /><span>Posts / Comments</span></div>
+          </div>
+        </div>
       </section>
 
       <section id="contact" class="container section page-section" data-page="community">
@@ -240,6 +254,13 @@
           status_1_title: '✅ Domain & Pages', status_1_text: 'stewrobot.com is live and connected to GitHub Pages.',
           status_2_title: '✅ Board Server Repo', status_2_text: 'Node.js board backend pushed with API, comments, password protection, and docs.',
           status_3_title: '✅ Live Board Deploy', status_3_text: 'HTTPS is enabled and board service is now reachable at board.stewrobot.com.',
+          progress_log_title: 'Recent milestones (latest first)',
+          milestone_1: 'Live board HTTPS activation + custom domain routing stabilized.',
+          milestone_2: 'Community workspace mode added (in-page board control tabs).',
+          milestone_3: 'Board CRUD, comments, password protection, and IP capture completed.',
+          milestone_4: 'Monorepo structure launched for web, mobile, backend, and shared packages.',
+          milestone_5: 'Organization + social branding + domain pipeline established.',
+
           live_label: 'Live board URL', live_chip: 'online', live_hint: 'Community board is now live with HTTPS.',
           board_title: 'Community Hub', board_source: 'Board source ↗',
           board_note: 'Live board deployment is complete. This preview shows the intended interaction style.',
@@ -256,7 +277,10 @@
           deploy_4: 'Run app on port 3000 via PM2 (<code>ecosystem.config.cjs</code>)',
           deploy_5: 'Reverse proxy <code>board.stewrobot.com</code> → <code>127.0.0.1:3000</code>',
           deploy_6: 'Enable HTTPS certificate and verify CRUD + API docs',
-          community_title: 'Community', community_text: 'Official communication is now handled in the live board.', community_link: 'Go to board.stewrobot.com ↗',
+          deploy_7: 'Set daily DB backup + 14-day retention and monthly restore drill',
+          deploy_8: 'Monitor uptime, error logs, and certificate renewal status',
+          ops_title: 'Service map',
+          community_title: 'Community', community_text: 'Official communication is now handled in the live board.', community_link: 'Go to board.stewrobot.com ↗', embed_help: 'If the embedded board does not load, use “Open Full” to continue in the same tab.',
           footer_prefix: '©', footer_suffix: 'All rights reserved.'
         },
         ja: {
