--- a/index.html
+++ b/index.html
@@ -113,30 +113,32 @@
       </section>
 
       <section id="board" class="container section page-section" data-page="community">
-        <div class="board-head">
-          <h2 data-i18n="board_title">Community Hub</h2>
-          <a class="btn" href="https://board.stewrobot.com" rel="noreferrer" data-i18n="board_open_full">Open community board ↗</a>
+        <div class="community-header">
+          <h2 data-i18n="board_title">📋 Community Board</h2>
+          <a class="api-link" href="https://board.stewrobot.com/api-docs" rel="noreferrer" data-i18n="board_api_link">API docs</a>
         </div>
-        <p class="board-note" data-i18n="board_note">A conventional board-style view is shown below with live posts from the community service.</p>
+
+        <div class="community-toolbar">
+          <p class="community-count"><span data-i18n="board_total_label">Total</span> <strong id="communityCount">0</strong></p>
+          <div class="community-actions">
+            <a class="btn primary" href="https://board.stewrobot.com/posts/new" rel="noreferrer" data-i18n="board_tab_write">✏️ Write</a>
+          </div>
+        </div>
 
         <div class="community-board">
-          <div class="community-actions">
-            <a class="btn" href="https://board.stewrobot.com" rel="noreferrer" data-i18n="board_tab_home">Board Home</a>
-            <a class="btn" href="https://board.stewrobot.com/posts/new" rel="noreferrer" data-i18n="board_tab_write">Write</a>
-            <a class="btn" href="https://board.stewrobot.com/api-docs" rel="noreferrer" data-i18n="board_tab_docs">API Docs</a>
-          </div>
           <div class="board-table-wrap">
             <table class="board-table">
               <thead>
                 <tr>
                   <th style="width:70px" data-i18n="board_col_id">No.</th>
                   <th data-i18n="board_col_title">Title</th>
-                  <th style="width:120px" data-i18n="board_col_author">Author</th>
+                  <th style="width:140px" data-i18n="board_col_author">Author</th>
                   <th style="width:190px" data-i18n="board_col_created">Created</th>
+                  <th style="width:90px" data-i18n="board_col_comments">Comments</th>
                 </tr>
               </thead>
               <tbody id="communityPostsBody">
-                <tr><td colspan="4" data-i18n="board_loading">Loading posts...</td></tr>
+                <tr><td colspan="5" data-i18n="board_loading">Loading posts...</td></tr>
               </tbody>
             </table>
           </div>
@@ -220,9 +222,9 @@
           status_2_title: '✅ 보드 서버 레포', status_2_text: 'Node.js 보드 백엔드(API/댓글/비밀번호 보호/문서) 푸시 완료.',
           status_3_title: '✅ 라이브 보드 배포', status_3_text: 'HTTPS 활성화 완료, board.stewrobot.com 접속 가능.',
           live_label: '라이브 보드 URL', live_chip: '온라인', live_hint: '커뮤니티 보드는 HTTPS로 운영 중입니다.',
-          board_title: '커뮤니티 허브', board_open_full: '커뮤니티 보드 열기 ↗',
+          board_title: '📋 커뮤니티 게시판', board_api_link: 'API 문서 보기', board_open_full: '커뮤니티 보드 열기 ↗',
           board_note: '아래에는 라이브 커뮤니티 게시판의 최신 글이 일반적인 게시판 형식으로 표시됩니다.',
-          board_tab_home: '보드 홈', board_tab_write: '글쓰기', board_tab_docs: 'API 문서', board_col_id: '번호', board_col_title: '제목', board_col_author: '작성자', board_col_created: '작성일', board_loading: '게시글 불러오는 중...', board_empty: '게시글이 없습니다.',
+          board_tab_home: '보드 홈', board_tab_write: '✏️ 글쓰기', board_tab_docs: 'API 문서', board_total_label: '전체', board_col_id: '번호', board_col_title: '제목', board_col_author: '작성자', board_col_created: '작성일', board_col_comments: '댓글', board_loading: '게시글 불러오는 중...', board_empty: '게시글이 없습니다.',
           post1_title: '[공지] stewrobot 로드맵 v0.1', post1_body: '모바일 베타 일정과 웹 기능 우선순위를 공유합니다. 댓글로 피드백 남겨주세요.', post1_meta: 'admin · 22:31 · 댓글 4',
           post2_title: '첫 사용자 테스트 참여자 모집', post2_body: 'iOS/Android 클로즈드 베타 예정. 참여 희망자는 보드에서 알려주세요.', post2_meta: 'team · 21:52 · 댓글 2',
           post3_title: 'Q&A: 도메인 + HTTPS 타임라인', post3_body: 'DNS 전파/인증서 발급 시간을 정리했습니다. 막히는 지점이 있으면 질문 주세요.', post3_meta: 'stewrobot · 20:07 · 댓글 7',
@@ -278,9 +280,9 @@
           labs_3_meta: 'status: planned · type: app',
 
           live_label: 'Live board URL', live_chip: 'online', live_hint: 'Community board is now live with HTTPS.',
-          board_title: 'Community Hub', board_open_full: 'Open community board ↗',
+          board_title: '📋 Community Board', board_api_link: 'API docs', board_open_full: 'Open community board ↗',
           board_note: 'A conventional board-style view is shown below with live posts from the community service.',
-          board_tab_home: 'Board Home', board_tab_write: 'Write', board_tab_docs: 'API Docs', board_col_id: 'No.', board_col_title: 'Title', board_col_author: 'Author', board_col_created: 'Created', board_loading: 'Loading posts...', board_empty: 'No posts yet.',
+          board_tab_home: 'Board Home', board_tab_write: '✏️ Write', board_tab_docs: 'API Docs', board_total_label: 'Total', board_col_id: 'No.', board_col_title: 'Title', board_col_author: 'Author', board_col_created: 'Created', board_col_comments: 'Comments', board_loading: 'Loading posts...', board_empty: 'No posts yet.',
           post1_title: '[Notice] stewrobot roadmap v0.1', post1_body: 'Sharing the mobile beta timeline and web feature priorities. Leave feedback in comments.', post1_meta: 'admin · 22:31 · comments 4',
           post2_title: 'Looking for first user test participants', post2_body: 'Closed beta is planned for iOS and Android. Reach out on the board if you want to join.', post2_meta: 'team · 21:52 · comments 2',
           post3_title: 'Q&A: Domain + HTTPS timeline', post3_body: 'We summarized DNS propagation and certificate issuance timing. Ask if you hit any blockers.', post3_meta: 'stewrobot · 20:07 · comments 7',
@@ -317,9 +319,9 @@
           status_2_title: '✅ ボードサーバー リポジトリ', status_2_text: 'Node.jsボードバックエンド(API/コメント/パスワード保護/ドキュメント)をプッシュ済み。',
           status_3_title: '✅ ライブボード配備', status_3_text: 'HTTPSが有効化され、board.stewrobot.com で利用可能です。',
           live_label: 'ライブボードURL', live_chip: 'online', live_hint: 'コミュニティボードはHTTPSで稼働中です。',
-          board_title: 'コミュニティハブ', board_open_full: 'コミュニティボードを開く ↗',
+          board_title: '📋 コミュニティ掲示板', board_api_link: 'API ドキュメント', board_open_full: 'コミュニティボードを開く ↗',
           board_note: '以下にコミュニティ掲示板の最新投稿を一般的な掲示板レイアウトで表示します。',
-          board_tab_home: 'ボードホーム', board_tab_write: '投稿', board_tab_docs: 'APIドキュメント', board_col_id: '番号', board_col_title: 'タイトル', board_col_author: '作成者', board_col_created: '作成日時', board_loading: '読み込み中...', board_empty: '投稿がありません。',
+          board_tab_home: 'ボードホーム', board_tab_write: '✏️ 投稿', board_tab_docs: 'APIドキュメント', board_total_label: '全体', board_col_id: '番号', board_col_title: 'タイトル', board_col_author: '作成者', board_col_created: '作成日時', board_col_comments: 'コメント', board_loading: '読み込み中...', board_empty: '投稿がありません。',
           post1_title: '[お知らせ] stewrobot ロードマップ v0.1', post1_body: 'モバイルベータ日程とWeb機能の優先順位を共有します。コメントでフィードバックをお願いします。', post1_meta: 'admin · 22:31 · コメント 4',
           post2_title: '最初のユーザーテスト参加者を募集', post2_body: 'iOS/Android向けクローズドベータを予定。参加希望は掲示板で知らせてください。', post2_meta: 'team · 21:52 · コメント 2',
           post3_title: 'Q&A: ドメイン + HTTPS タイムライン', post3_body: 'DNS伝播と証明書発行の所要時間をまとめました。詰まったら質問してください。', post3_meta: 'stewrobot · 20:07 · コメント 7',
@@ -499,14 +501,17 @@
 
       async function loadCommunityPosts() {
         const tbody = document.getElementById('communityPostsBody');
+        const countEl = document.getElementById('communityCount');
         if (!tbody) return;
         try {
           const res = await fetch('https://board.stewrobot.com/api/posts', { mode: 'cors' });
           if (!res.ok) throw new Error('failed');
           const posts = await res.json();
           const list = Array.isArray(posts) ? posts.slice(0, 12) : [];
+          if (countEl) countEl.textContent = String(Array.isArray(posts) ? posts.length : list.length);
           if (!list.length) {
-            tbody.innerHTML = `<tr><td colspan="4">${(i18n[document.documentElement.lang]||i18n.en).board_empty || 'No posts yet.'}</td></tr>`;
+            if (countEl) countEl.textContent = "0";
+            tbody.innerHTML = `<tr><td colspan="5">${(i18n[document.documentElement.lang]||i18n.en).board_empty || 'No posts yet.'}</td></tr>`;
             return;
           }
           tbody.innerHTML = list.map((p) => {
@@ -518,10 +523,12 @@
               <td><a class="row-link" href="https://board.stewrobot.com/posts/${p.id}" rel="noreferrer">${title}</a></td>
               <td>${p.author || 'anonymous'}</td>
               <td>${ds}</td>
+              <td>0</td>
             </tr>`;
           }).join('');
         } catch (_e) {
-          tbody.innerHTML = `<tr><td colspan="4">Unable to load embedded list. Use Open community board.</td></tr>`;
+          if (countEl) countEl.textContent = "-";
+          tbody.innerHTML = `<tr><td colspan="5">Unable to load embedded list. Use Open community board.</td></tr>`;
         }
       }
 
