--- a/index.html
+++ b/index.html
@@ -122,11 +122,51 @@
           <div class="community-toolbar">
             <p class="community-count"><span data-i18n="board_total_label">Total</span> <strong id="communityCount">0</strong></p>
             <div class="community-actions">
-              <a class="btn write-btn" href="https://board.stewrobot.com/posts/new" rel="noreferrer" data-i18n="board_tab_write">✏️ Write</a>
+              <button class="btn write-btn" id="communityWriteBtn" type="button" data-i18n="board_tab_write">✏️ Write</button>
             </div>
           </div>
 
-          <div class="board-table-wrap">
+          <section class="community-panel hidden" id="communityWritePanel">
+            <h3 data-i18n="write_title">✏️ Write a post</h3>
+            <form id="communityWriteForm" class="community-form">
+              <div class="form-grid">
+                <div>
+                  <label data-i18n="field_author">Author</label>
+                  <input name="author" required maxlength="100" placeholder="author" />
+                </div>
+                <div>
+                  <label data-i18n="field_password">Password</label>
+                  <input name="password" type="password" required minlength="4" placeholder="min 4 chars" />
+                </div>
+              </div>
+              <div>
+                <label data-i18n="field_title">Title</label>
+                <input name="title" required maxlength="255" placeholder="title" />
+              </div>
+              <div>
+                <label data-i18n="field_content">Content</label>
+                <textarea name="content" rows="7" required placeholder="write your message"></textarea>
+              </div>
+              <div class="panel-actions">
+                <button class="btn primary" type="submit" data-i18n="write_submit">Post</button>
+                <button class="btn" type="button" id="communityWriteCancel" data-i18n="write_cancel">Cancel</button>
+              </div>
+            </form>
+          </section>
+
+          <section class="community-panel hidden" id="communityDetailPanel">
+            <h3 id="communityDetailTitle">Post detail</h3>
+            <p class="muted small" id="communityDetailMeta"></p>
+            <p id="communityDetailContent"></p>
+            <hr class="sep" />
+            <h4 data-i18n="comments_title">Comments</h4>
+            <div id="communityDetailComments" class="comment-mini-list"></div>
+            <div class="panel-actions">
+              <button class="btn" type="button" id="communityBackToList" data-i18n="back_to_list">Back to list</button>
+            </div>
+          </section>
+
+          <div class="board-table-wrap" id="communityListWrap">
             <table class="board-table">
               <thead>
                 <tr>
@@ -224,7 +264,7 @@
           live_label: '라이브 보드 URL', live_chip: '온라인', live_hint: '커뮤니티 보드는 HTTPS로 운영 중입니다.',
           board_title: '📋 커뮤니티 게시판', board_api_link: 'API 문서 보기', board_open_full: '커뮤니티 보드 열기 ↗',
           board_note: '아래에는 라이브 커뮤니티 게시판의 최신 글이 일반적인 게시판 형식으로 표시됩니다.',
-          board_tab_home: '보드 홈', board_tab_write: '✏️ 글쓰기', board_tab_docs: 'API 문서', board_total_label: '전체', board_col_id: '번호', board_col_title: '제목', board_col_author: '작성자', board_col_created: '작성일', board_col_comments: '댓글', board_loading: '게시글 불러오는 중...', board_empty: '게시글이 없습니다.',
+          board_tab_home: '보드 홈', board_tab_write: '✏️ 글쓰기', board_tab_docs: 'API 문서', board_total_label: '전체', board_col_id: '번호', board_col_title: '제목', board_col_author: '작성자', board_col_created: '작성일', board_col_comments: '댓글', board_loading: '게시글 불러오는 중...', board_empty: '게시글이 없습니다.', back_to_list: '목록으로', comments_title: '댓글', write_cancel: '취소', write_submit: '등록', field_content: '내용', field_title: '제목', field_password: '비밀번호', field_author: '작성자', write_title: '✏️ 글쓰기',
           post1_title: '[공지] stewrobot 로드맵 v0.1', post1_body: '모바일 베타 일정과 웹 기능 우선순위를 공유합니다. 댓글로 피드백 남겨주세요.', post1_meta: 'admin · 22:31 · 댓글 4',
           post2_title: '첫 사용자 테스트 참여자 모집', post2_body: 'iOS/Android 클로즈드 베타 예정. 참여 희망자는 보드에서 알려주세요.', post2_meta: 'team · 21:52 · 댓글 2',
           post3_title: 'Q&A: 도메인 + HTTPS 타임라인', post3_body: 'DNS 전파/인증서 발급 시간을 정리했습니다. 막히는 지점이 있으면 질문 주세요.', post3_meta: 'stewrobot · 20:07 · 댓글 7',
@@ -282,7 +322,7 @@
           live_label: 'Live board URL', live_chip: 'online', live_hint: 'Community board is now live with HTTPS.',
           board_title: '📋 Community Board', board_api_link: 'API docs', board_open_full: 'Open community board ↗',
           board_note: 'A conventional board-style view is shown below with live posts from the community service.',
-          board_tab_home: 'Board Home', board_tab_write: '✏️ Write', board_tab_docs: 'API Docs', board_total_label: 'Total', board_col_id: 'No.', board_col_title: 'Title', board_col_author: 'Author', board_col_created: 'Created', board_col_comments: 'Comments', board_loading: 'Loading posts...', board_empty: 'No posts yet.',
+          board_tab_home: 'Board Home', board_tab_write: '✏️ Write', board_tab_docs: 'API Docs', board_total_label: 'Total', board_col_id: 'No.', board_col_title: 'Title', board_col_author: 'Author', board_col_created: 'Created', board_col_comments: 'Comments', board_loading: 'Loading posts...', board_empty: 'No posts yet.', back_to_list: 'Back to list', comments_title: 'Comments', write_cancel: 'Cancel', write_submit: 'Post', field_content: 'Content', field_title: 'Title', field_password: 'Password', field_author: 'Author', write_title: '✏️ Write a post',
           post1_title: '[Notice] stewrobot roadmap v0.1', post1_body: 'Sharing the mobile beta timeline and web feature priorities. Leave feedback in comments.', post1_meta: 'admin · 22:31 · comments 4',
           post2_title: 'Looking for first user test participants', post2_body: 'Closed beta is planned for iOS and Android. Reach out on the board if you want to join.', post2_meta: 'team · 21:52 · comments 2',
           post3_title: 'Q&A: Domain + HTTPS timeline', post3_body: 'We summarized DNS propagation and certificate issuance timing. Ask if you hit any blockers.', post3_meta: 'stewrobot · 20:07 · comments 7',
@@ -321,7 +361,7 @@
           live_label: 'ライブボードURL', live_chip: 'online', live_hint: 'コミュニティボードはHTTPSで稼働中です。',
           board_title: '📋 コミュニティ掲示板', board_api_link: 'API ドキュメント', board_open_full: 'コミュニティボードを開く ↗',
           board_note: '以下にコミュニティ掲示板の最新投稿を一般的な掲示板レイアウトで表示します。',
-          board_tab_home: 'ボードホーム', board_tab_write: '✏️ 投稿', board_tab_docs: 'APIドキュメント', board_total_label: '全体', board_col_id: '番号', board_col_title: 'タイトル', board_col_author: '作成者', board_col_created: '作成日時', board_col_comments: 'コメント', board_loading: '読み込み中...', board_empty: '投稿がありません。',
+          board_tab_home: 'ボードホーム', board_tab_write: '✏️ 投稿', board_tab_docs: 'APIドキュメント', board_total_label: '全体', board_col_id: '番号', board_col_title: 'タイトル', board_col_author: '作成者', board_col_created: '作成日時', board_col_comments: 'コメント', board_loading: '読み込み中...', board_empty: '投稿がありません。', back_to_list: '一覧へ', comments_title: 'コメント', write_cancel: 'キャンセル', write_submit: '登録', field_content: '内容', field_title: 'タイトル', field_password: 'パスワード', field_author: '作成者', write_title: '✏️ 投稿',
           post1_title: '[お知らせ] stewrobot ロードマップ v0.1', post1_body: 'モバイルベータ日程とWeb機能の優先順位を共有します。コメントでフィードバックをお願いします。', post1_meta: 'admin · 22:31 · コメント 4',
           post2_title: '最初のユーザーテスト参加者を募集', post2_body: 'iOS/Android向けクローズドベータを予定。参加希望は掲示板で知らせてください。', post2_meta: 'team · 21:52 · コメント 2',
           post3_title: 'Q&A: ドメイン + HTTPS タイムライン', post3_body: 'DNS伝播と証明書発行の所要時間をまとめました。詰まったら質問してください。', post3_meta: 'stewrobot · 20:07 · コメント 7',
@@ -441,28 +481,7 @@
           closeThemeMenu();
         });
       });
-
-
-      const boardFrame = document.getElementById('boardFrame');
-      const boardViewMap = {
-        home: 'https://board.stewrobot.com/',
-        write: 'https://board.stewrobot.com/posts/new',
-        docs: 'https://board.stewrobot.com/api-docs',
-      };
-
-      document.querySelectorAll('.board-tab-btn').forEach((btn) => {
-        btn.addEventListener('click', () => {
-          const view = btn.dataset.boardView;
-          if (view === 'full') {
-            window.location.href = 'https://board.stewrobot.com';
-            return;
-          }
-          boardFrame.src = boardViewMap[view] || boardViewMap.home;
-          document.querySelectorAll('.board-tab-btn').forEach((b) => b.classList.toggle('active', b === btn));
-        });
-      });
-
-      function setMainView(viewName) {
+function setMainView(viewName) {
         const homeMode = viewName === 'overview' || viewName === 'progress' || viewName === 'labs' || viewName === 'deploy';
 
         document.querySelectorAll('.home-section').forEach((el) => {
@@ -510,10 +529,10 @@
           const list = Array.isArray(posts) ? posts.slice(0, 12) : [];
           if (countEl) countEl.textContent = String(Array.isArray(posts) ? posts.length : list.length);
           if (!list.length) {
-            if (countEl) countEl.textContent = "0";
             tbody.innerHTML = `<tr><td colspan="5">${(i18n[document.documentElement.lang]||i18n.en).board_empty || 'No posts yet.'}</td></tr>`;
             return;
           }
+
           const detailed = await Promise.all(list.map(async (p) => {
             try {
               const r = await fetch(`https://board.stewrobot.com/api/posts/${p.id}`, { mode: 'cors' });
@@ -532,19 +551,83 @@
             const title = String(p.title || '').replace(/</g,'&lt;');
             return `<tr>
               <td>#${p.id}</td>
-              <td><a class="row-link" href="https://board.stewrobot.com/posts/${p.id}" rel="noreferrer">${title}</a></td>
+              <td><a class="row-link" href="#" data-post-id="${p.id}">${title}</a></td>
               <td>${p.author || 'anonymous'}</td>
               <td>${ds}</td>
               <td><span class="comment-badge">${p.commentsCount || 0}</span></td>
             </tr>`;
           }).join('');
+
+          document.querySelectorAll('.row-link').forEach((a) => {
+            a.addEventListener('click', async (e) => {
+              e.preventDefault();
+              await openCommunityDetail(a.dataset.postId);
+            });
+          });
         } catch (_e) {
-          if (countEl) countEl.textContent = "-";
+          if (countEl) countEl.textContent = '-';
           tbody.innerHTML = `<tr><td colspan="5">Unable to load embedded list. Use Open community board.</td></tr>`;
         }
       }
 
-      const brandTopLink = document.getElementById('brandTopLink');
+      function showCommunityList() {
+        document.getElementById('communityListWrap').style.display = '';
+        document.getElementById('communityWritePanel').classList.add('hidden');
+        document.getElementById('communityDetailPanel').classList.add('hidden');
+      }
+
+      function showCommunityWrite() {
+        document.getElementById('communityListWrap').style.display = '';
+        document.getElementById('communityWritePanel').classList.remove('hidden');
+        document.getElementById('communityDetailPanel').classList.add('hidden');
+        document.getElementById('communityWritePanel').scrollIntoView({ behavior: 'smooth', block: 'start' });
+      }
+
+      async function openCommunityDetail(postId) {
+        const r = await fetch(`https://board.stewrobot.com/api/posts/${postId}`, { mode: 'cors' });
+        if (!r.ok) return;
+        const post = await r.json();
+        const panel = document.getElementById('communityDetailPanel');
+        document.getElementById('communityListWrap').style.display = 'none';
+        document.getElementById('communityWritePanel').classList.add('hidden');
+        panel.classList.remove('hidden');
+        document.getElementById('communityDetailTitle').textContent = post.title || 'Untitled';
+        document.getElementById('communityDetailMeta').textContent = `${post.author || 'anonymous'} · ${new Date(post.createdAt || Date.now()).toLocaleString()}`;
+        document.getElementById('communityDetailContent').textContent = post.content || '';
+        const comments = Array.isArray(post.comments) ? post.comments : [];
+        const cEl = document.getElementById('communityDetailComments');
+        cEl.innerHTML = comments.length
+          ? comments.map((c) => `<div class="comment-mini"><strong>${c.author || 'anonymous'}</strong> · ${new Date(c.createdAt || Date.now()).toLocaleString()}<p>${String(c.content || '').replace(/</g,'&lt;')}</p></div>`).join('')
+          : '<p class="muted small">No comments yet.</p>';
+        panel.scrollIntoView({ behavior: 'smooth', block: 'start' });
+      }
+
+      document.getElementById('communityWriteBtn')?.addEventListener('click', showCommunityWrite);
+      document.getElementById('communityWriteCancel')?.addEventListener('click', showCommunityList);
+      document.getElementById('communityBackToList')?.addEventListener('click', () => {
+        showCommunityList();
+        loadCommunityPosts();
+      });
+
+      document.getElementById('communityWriteForm')?.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const fd = new FormData(e.currentTarget);
+        const payload = Object.fromEntries(fd.entries());
+        const r = await fetch('https://board.stewrobot.com/api/posts', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(payload),
+        });
+        if (!r.ok) {
+          alert('Failed to create post. Check fields/password (min 4).');
+          return;
+        }
+        e.currentTarget.reset();
+        showCommunityList();
+        loadCommunityPosts();
+      });
+
+      const brandTopLinkconst brandTopLink = document.getElementById('brandTopLink');
       brandTopLink.addEventListener('click', (e) => {
         e.preventDefault();
         history.replaceState(null, '', window.location.pathname + window.location.search);
