--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#" class="nav-link" data-view="progress" data-i18n="nav_status">Progress</a>
             <a href="#" class="nav-link" data-view="labs" data-i18n="nav_labs">Labs</a>
             <a href="#" class="nav-link" data-view="deploy" data-i18n="nav_deploy">Deploy</a>
-            <a href="#" class="nav-link community-link" data-view="community" data-i18n="nav_contact">Community</a>
+            <a href="#" class="nav-link community-link" data-view="community" data-i18n="nav_contact">Board</a>
           </nav>
 
           <div class="theme-switch" aria-label="Theme switcher">
@@ -247,7 +247,7 @@
 
       const i18n = {
         ko: {
-          nav_about: '개요', nav_status: '진행상황', nav_board: '보드', nav_contact: '커뮤니티', nav_labs: '랩스', nav_deploy: '배포',
+          nav_about: '개요', nav_status: '진행상황', nav_board: '보드', nav_contact: '보드', nav_labs: '랩스', nav_deploy: '배포',
           lang_full: '완료', lang_partial: '부분',
           eyebrow: '♾️ 코스믹 AI 빌더',
           hero_title: '보드 중심 런칭, 진행 중.',
@@ -262,7 +262,7 @@
           status_2_title: '✅ 보드 서버 레포', status_2_text: 'Node.js 보드 백엔드(API/댓글/비밀번호 보호/문서) 푸시 완료.',
           status_3_title: '✅ 라이브 보드 배포', status_3_text: 'HTTPS 활성화 완료, board.stewrobot.com 접속 가능.',
           live_label: '라이브 보드 URL', live_chip: '온라인', live_hint: '커뮤니티 보드는 HTTPS로 운영 중입니다.',
-          board_title: '📋 커뮤니티 게시판', board_api_link: 'API 문서 보기', board_open_full: '커뮤니티 보드 열기 ↗',
+          board_title: '📋 보드', board_api_link: 'API 문서 보기', board_open_full: '커뮤니티 보드 열기 ↗',
           board_note: '아래에는 라이브 커뮤니티 게시판의 최신 글이 일반적인 게시판 형식으로 표시됩니다.',
           board_tab_home: '보드 홈', board_tab_write: '✏️ 글쓰기', board_tab_docs: 'API 문서', board_total_label: '전체', board_col_id: '번호', board_col_title: '제목', board_col_author: '작성자', board_col_created: '작성일', board_col_comments: '댓글', board_loading: '게시글 불러오는 중...', board_empty: '게시글이 없습니다.', back_to_list: '목록으로', comments_title: '댓글', write_cancel: '취소', write_submit: '등록', field_content: '내용', field_title: '제목', field_password: '비밀번호', field_author: '작성자', write_title: '✏️ 글쓰기',
           post1_title: '[공지] stewrobot 로드맵 v0.1', post1_body: '모바일 베타 일정과 웹 기능 우선순위를 공유합니다. 댓글로 피드백 남겨주세요.', post1_meta: 'admin · 22:31 · 댓글 4',
@@ -282,7 +282,7 @@
           footer_prefix: '©', footer_suffix: 'All rights reserved.'
         },
         en: {
-          nav_about: 'Overview', nav_status: 'Progress', nav_board: 'Board', nav_contact: 'Community', nav_labs: 'Labs', nav_deploy: 'Deploy',
+          nav_about: 'Overview', nav_status: 'Progress', nav_board: 'Board', nav_contact: 'Board', nav_labs: 'Labs', nav_deploy: 'Deploy',
           lang_full: 'full', lang_partial: 'partial',
           eyebrow: '♾️ Cosmic AI Builder',
           hero_title: 'Board-first launch in motion.',
@@ -320,7 +320,7 @@
           labs_3_meta: 'status: planned · type: app',
 
           live_label: 'Live board URL', live_chip: 'online', live_hint: 'Community board is now live with HTTPS.',
-          board_title: '📋 Community Board', board_api_link: 'API docs', board_open_full: 'Open community board ↗',
+          board_title: '📋 Board', board_api_link: 'API docs', board_open_full: 'Open community board ↗',
           board_note: 'A conventional board-style view is shown below with live posts from the community service.',
           board_tab_home: 'Board Home', board_tab_write: '✏️ Write', board_tab_docs: 'API Docs', board_total_label: 'Total', board_col_id: 'No.', board_col_title: 'Title', board_col_author: 'Author', board_col_created: 'Created', board_col_comments: 'Comments', board_loading: 'Loading posts...', board_empty: 'No posts yet.', back_to_list: 'Back to list', comments_title: 'Comments', write_cancel: 'Cancel', write_submit: 'Post', field_content: 'Content', field_title: 'Title', field_password: 'Password', field_author: 'Author', write_title: '✏️ Write a post',
           post1_title: '[Notice] stewrobot roadmap v0.1', post1_body: 'Sharing the mobile beta timeline and web feature priorities. Leave feedback in comments.', post1_meta: 'admin · 22:31 · comments 4',
@@ -344,7 +344,7 @@
           footer_prefix: '©', footer_suffix: 'All rights reserved.'
         },
         ja: {
-          nav_about: '概要', nav_status: '進捗', nav_board: '掲示板', nav_contact: 'コミュニティ', nav_labs: 'ラボ', nav_deploy: 'デプロイ',
+          nav_about: '概要', nav_status: '進捗', nav_board: '掲示板', nav_contact: '掲示板', nav_labs: 'ラボ', nav_deploy: 'デプロイ',
           lang_full: '完了', lang_partial: '一部',
           eyebrow: '♾️ コズミックAIビルダー',
           hero_title: 'ボード中心のローンチ、進行中。',
@@ -359,7 +359,7 @@
           status_2_title: '✅ ボードサーバー リポジトリ', status_2_text: 'Node.jsボードバックエンド(API/コメント/パスワード保護/ドキュメント)をプッシュ済み。',
           status_3_title: '✅ ライブボード配備', status_3_text: 'HTTPSが有効化され、board.stewrobot.com で利用可能です。',
           live_label: 'ライブボードURL', live_chip: 'online', live_hint: 'コミュニティボードはHTTPSで稼働中です。',
-          board_title: '📋 コミュニティ掲示板', board_api_link: 'API ドキュメント', board_open_full: 'コミュニティボードを開く ↗',
+          board_title: '📋 掲示板', board_api_link: 'API ドキュメント', board_open_full: 'コミュニティボードを開く ↗',
           board_note: '以下にコミュニティ掲示板の最新投稿を一般的な掲示板レイアウトで表示します。',
           board_tab_home: 'ボードホーム', board_tab_write: '✏️ 投稿', board_tab_docs: 'APIドキュメント', board_total_label: '全体', board_col_id: '番号', board_col_title: 'タイトル', board_col_author: '作成者', board_col_created: '作成日時', board_col_comments: 'コメント', board_loading: '読み込み中...', board_empty: '投稿がありません。', back_to_list: '一覧へ', comments_title: 'コメント', write_cancel: 'キャンセル', write_submit: '登録', field_content: '内容', field_title: 'タイトル', field_password: 'パスワード', field_author: '作成者', write_title: '✏️ 投稿',
           post1_title: '[お知らせ] stewrobot ロードマップ v0.1', post1_body: 'モバイルベータ日程とWeb機能の優先順位を共有します。コメントでフィードバックをお願いします。', post1_meta: 'admin · 22:31 · コメント 4',
@@ -388,7 +388,7 @@
         hi: { nav_about: 'अवलोकन', nav_status: 'प्रगति', nav_board: 'बोर्ड', nav_contact: 'समुदाय', lang_full: 'पूर्ण', lang_partial: 'आंशिक' },
         ar: { nav_about: 'نظرة عامة', nav_status: 'التقدم', nav_board: 'اللوحة', nav_contact: 'المجتمع', lang_full: 'كامل', lang_partial: 'جزئي' },
         fr: { nav_about: 'Aperçu', nav_status: 'Progression', nav_board: 'Forum', nav_contact: 'Communauté', lang_full: 'complet', lang_partial: 'partiel' },
-        de: { nav_about: 'Überblick', nav_status: 'Fortschritt', nav_board: 'Board', nav_contact: 'Community', lang_full: 'voll', lang_partial: 'teilweise' },
+        de: { nav_about: 'Überblick', nav_status: 'Fortschritt', nav_board: 'Board', nav_contact: 'Board', lang_full: 'voll', lang_partial: 'teilweise' },
         id: { nav_about: 'Ringkasan', nav_status: 'Progres', nav_board: 'Board', nav_contact: 'Komunitas', lang_full: 'penuh', lang_partial: 'parsial' }
       };
 
@@ -580,7 +580,6 @@ function setMainView(viewName) {
         document.getElementById('communityListWrap').style.display = '';
         document.getElementById('communityWritePanel').classList.remove('hidden');
         document.getElementById('communityDetailPanel').classList.add('hidden');
-        document.getElementById('communityWritePanel').scrollIntoView({ behavior: 'smooth', block: 'start' });
       }
 
       async function openCommunityDetail(postId) {
